@@ -1,42 +1,32 @@
 
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.3.10'
+    id "org.jetbrains.kotlin.jvm" version "1.3.72"
 }
 
-apply from: "$gradleScripts/kotlin.gradle"
-apply from: "$gradleScripts/service.gradle"
+apply(from: "$gradleScripts/kotlin.gradle")
+apply(from: "$gradleScripts/application.gradle")
+apply(from: "$gradleScripts/junit.gradle")
 
-apply plugin: 'war'
+apply(plugin: "war")
 
-defaultTasks 'installDist'
-
-mainClassName = "com.hexagonkt.BenchmarkKt"
-applicationDefaultJvmArgs = [
-    '-Xms2G', '-Xmx2G', '-XX:+UseNUMA', '-XX:+UseParallelGC', '-XX:+AggressiveOpts'
-]
+defaultTasks("installDist")
 
 war {
-    archiveName = "ROOT.war"
+    archiveFileName = "ROOT.war"
 }
 
-installDist.dependsOn 'war'
+installDist.dependsOn("war")
 
 dependencies {
-    compile ("com.hexagonkt:store_mongodb:$hexagonVersion")
-    compile ("com.hexagonkt:server_jetty:$hexagonVersion")
-    compile ("com.hexagonkt:templates_pebble:$hexagonVersion")
+    implementation("com.hexagonkt:store_mongodb:$hexagonVersion")
+    implementation("com.hexagonkt:http_server_jetty:$hexagonVersion")
+    implementation("com.hexagonkt:templates_pebble:$hexagonVersion")
 
-    compile ("ch.qos.logback:logback-classic:$logbackVersion")
-    compile ("com.zaxxer:HikariCP:$hikariVersion")
-    compile ("org.postgresql:postgresql:$postgresqlVersion")
+    implementation("com.zaxxer:HikariCP:$hikariVersion")
+    implementation("org.postgresql:postgresql:$postgresqlVersion")
 
     // providedCompile excludes the dependency only in the WAR, not in the distribution
-    providedCompile ("org.eclipse.jetty:jetty-webapp:$jettyVersion") { exclude module: "slf4j-api" }
+    providedCompile("org.eclipse.jetty:jetty-webapp:$jettyVersion") { exclude module: "slf4j-api" }
 
-    testCompile ("com.hexagonkt:port_client:$hexagonVersion")
-    testCompile ("org.testng:testng:$testngVersion")
-}
-
-test {
-    useTestNG ()
+    testImplementation("com.hexagonkt:http_client_ahc:$hexagonVersion")
 }
